# guppi-cli

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RELEASE.md  SKILL.md  pyproject.toml  pytest.ini
.beads/: daemon-error  deletions.jsonl  issues.jsonl  last-touched
.github/: copilot-instructions.md
docs/design/: 2025-12-09-mvp-design.md  2025-12-15-tool-init.md  2025-12-15-tool-list-format-update.md  2025-12-15-tool-uninstall.md  2025-12-15-update-command.md  2026-05-14-multi-agent-support.md  RICH_UI_INTEGRATION.md  TOOL_SOURCE_INIT_DESIGN.md
history/: MVP_DESIGN.md
src/guppi/: __init__.py  __version__.py  agents.py  cli.py  discovery.py  router.py  ui.py
src/guppi/commands/: __init__.py  init.py  skill.py  tool.py  uninstall.py  update.py  upgrade.py
src/guppi/templates/: __init__.py  utils.py
src/guppi/templates/example-tool/: README.md  pyproject.toml
src/guppi/templates/example-tool/src/guppi_example/: __init__.py  cli.py
src/guppi/templates/source/: README.md  pyproject.toml
src/guppi/templates/tool/: README.md  gitignore  pyproject.toml
src/guppi/templates/tool-example/: cli.py
src/guppi/templates/tool/src/guppi_TOOLNAME/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_agents.py  test_cli.py  test_confirmation_prompts.py  test_discovery.py  test_router.py  test_smoke.py  test_source_init.py  test_template_structure.py  test_templates.py  test_tool_commands.py  test_tool_init.py  test_tool_uninstall.py  test_uninstall.py  test_update.py  test_upgrade.py
