[project]
name = "guppi"
version = "0.1.0"
description = "General Use Personal Program Interface - A plugin framework for composing tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
guppi = "guppi.cli:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guppi"]
