[project]
name = "guppi-example"
version = "0.1.0"
description = "Example GUPPI tool"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
guppi-example = "guppi_example.cli:app"

[tool.guppi]
name = "example"
description = "Example tool demonstrating GUPPI integration"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guppi_example"]
