[project]
name = "guppi-{tool_name}"
version = "0.1.0"
description = "{description}"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
guppi-{tool_name} = "guppi_{tool_name_underscore}.cli:app"

[tool.guppi]
name = "{tool_name}"
description = "{description}"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guppi_{tool_name_underscore}"]
